<resources>
    <string name="app_name">Notes Application</string>
    <string name="home_notes">Notes</string>
    <string name="you_have_no_notes">You have no notes</string>
    <string name="you_can_create_new_note_by_click">You can create new note by click + at the bottom of screen</string>
    <string name="add_note">add note</string>
    <string name="note_title">Note Title</string>
    <string name="note_content">Note Content</string>
    <string name="save">Save</string>
    <string name="editing_note">Editing Note</string>
    <string name="create_note">Create Note</string>
    <string name="do_you_want_to_delete_this_note">Do you want to delete this note?</string>
    <string name="if_you_delete_this_note_it_can_not_recovery_are_you_sure">If you delete this note, it can not recovery, Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_want_to_discard_this_note">Do you want to discard this note?</string>
    <string name="if_you_discard_this_note_all_changes_will_not_be_saved">If you discard this note, All changes will not be saved</string>
    <string name="some_thing_when_wrong">some thing when wrong</string>
</resources>