<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.notedetail.NoteDetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerToolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp60"
            android:background="@color/blue2196f3"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnBack"
                android:layout_width="@dimen/dp60"
                android:layout_height="@dimen/dp60"
                android:padding="@dimen/spacing16"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHeaderTitle"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/home_notes"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/btnDelete"
                app:layout_constraintStart_toEndOf="@id/btnBack"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnDelete"
                android:layout_width="@dimen/dp60"
                android:layout_height="@dimen/dp60"
                android:padding="@dimen/spacing16"
                android:src="@drawable/ic_delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNoteTitle"
            style="@style/MaterialAlertDialog.Material3.Title.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing16"
            android:text="@string/note_title"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerToolbar" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtInputNoteTitle"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing16"
            android:layout_marginTop="@dimen/spacing4"
            android:background="@drawable/bg_rounded_edt"
            android:includeFontPadding="false"
            android:maxLength="50"
            android:padding="@dimen/sp8"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/tvNoteTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNoteContent"
            style="@style/MaterialAlertDialog.Material3.Title.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing16"
            android:text="@string/note_content"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtInputNoteTitle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtInputNoteContent"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp0"
            android:layout_marginHorizontal="@dimen/spacing16"
            android:layout_marginTop="@dimen/spacing4"
            android:layout_marginBottom="@dimen/spacing16"
            android:background="@drawable/bg_rounded_edt"
            android:gravity="top"
            android:includeFontPadding="false"
            android:padding="@dimen/sp8"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/btnSave"
            app:layout_constraintTop_toBottomOf="@+id/tvNoteContent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing16"
            app:cardBackgroundColor="@color/blue2196f3"
            app:cardCornerRadius="@dimen/radius10"
            app:cardElevation="@dimen/dp0"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:padding="@dimen/spacing10"
                android:text="@string/save"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>